# Contextifier

./: .gitignore  BUILD_AND_PUBLISH.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_READY.md  Dockerfile  Process Logic.md  QUICKSTART.md  README.md  TODO.md  pyproject.toml  test.py  test_installation.py  test_output.txt
.github/workflows/: ci.yml
TODO/: contextifier_analysis.md  contextifier_data_flow_analysis.md  contextifier_handler_deep_analysis.md  contextifier_issues_analysis.md  contextifier_upgrade_roadmap.md
TODO_0401/: 01_architecture_current_state.md  02_handler_quality_analysis.md  03_service_pipeline_analysis.md  04_performance_security_edge_cases.md  05_api_dx_ecosystem.md  06_final_todo.md  07_process.md
_deep_test/: DEEP_TEST_REPORT_v0.2.6.md  FIX_REPORT_v0.2.6.md  create_test_files.py  deep_test_runner.py
_deep_test/results/: deep_test_results.json
_deep_test/test_files/: complex.csv  complex_table.html  empty.xlsx  korean.html  large.csv  large.xlsx  long.docx  merged_cells.docx  mixed_binary.txt  nested.html  nested.json  sample.csv  sample.docx  sample.html  sample.ini  sample.json  sample.md  sample.pptx  sample.py  sample.rtf  sample.tsv  sample.txt  sample.xls  sample.xlsx  sample.xml  sample.yaml  sample_bom.txt  sample_euckr.txt  semicolon.csv  table.rtf  whitespace.txt  wide.csv  xss_test.html
contextifier/: __init__.py  async_processor.py  cached_processor.py  config.py  document_processor.py  errors.py  types.py
contextifier/chunking/: __init__.py  chunker.py  chunking.py  constants.py  metadata_enricher.py  page_chunker.py  protected_regions.py  sheet_processor.py  table_chunker.py  table_parser.py  text_chunker.py
contextifier/core/: document_processor.py
contextifier/handlers/: __init__.py  base.py  registry.py
contextifier/integrations/: __init__.py  langchain_loader.py
contextifier/ocr/: __init__.py  base.py  processor.py
contextifier/pipeline/: __init__.py  content_extractor.py  converter.py  metadata_extractor.py  postprocessor.py  preprocessor.py
contextifier/raw/: __init__.py  base.py  chart.py  docx.py  opc.py  pptx.py  xlsx.py  xmlpart.py
contextifier/services/: __init__.py  chart_service.py  crypto_service.py  image_service.py  libreoffice.py  metadata_service.py  table_service.py  tag_service.py
contextifier_new/: document_processor.py
contextifier_new/chunking/: __init__.py  constants.py  table_chunker.py  table_parser.py
docs/: configuration.md  error_codes.md  handler_comparison.md  license_review.md  ocr_guide.md  plugin_development.md
libs/: __init__.py
libs/ocr/: base.py  (+2 more)
tests/: conftest.py  test_doc_handler.py  test_docx_handler.py  test_hwp_handler.py  test_hwpx_handler.py  test_image_handler.py  test_ppt_handler.py  test_rtf_handler.py  test_xls_handler.py  test_xlsx_handler.py
(+485 files in other folders)
