[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextifier"
version = "0.2.4"
description = "Convert raw documents into AI-understandable context with intelligent text extraction, table detection, and semantic chunking"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "CocoRoF", email = "gkfua00@gmail.com"},
]
maintainers = [
    {name = "CocoRoF", email = "gkfua00@gmail.com"},
]
keywords = [
    "document-processing",
    "pdf",
    "ocr",
    "text-extraction",
    "chunking",
    "ai",
    "llm",
    "langchain",
    "hwp",
    "docx",
    "xlsx",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "orjson>=3.10.0",
    "psutil>=7.0.0",
    "pandas>=2.2.0",
    "langchain>=1.0.0",
    "langchain-aws>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-google-genai>=4.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.0",
    "langsmith>=0.6.0",
    "beautifulsoup4>=4.12.0",
    "docx2pdf>=0.1.8",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "olefile>=0.47",
    "pyhwp>=0.1b15",
    "chardet>=5.0.0",
    "pi-heif>=1.0.0",
    "pdfminer.six>=20231228",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "striprtf>=0.0.29",
    "cachetools>=5.3.0",
]

[project.urls]
Homepage = "https://github.com/CocoRoF/Contextifier"
Documentation = "https://github.com/CocoRoF/Contextifier#readme"
Repository = "https://github.com/CocoRoF/Contextifier.git"
Issues = "https://github.com/CocoRoF/Contextifier/issues"
Changelog = "https://github.com/CocoRoF/Contextifier/releases"

[tool.hatch.build.targets.wheel]
packages = ["contextifier"]

[tool.hatch.build.targets.sdist]
include = [
    "contextifier/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "/.git",
    "/.venv",
    "/__pycache__",
    "*.pyc",
    "test/",
    "temp/",
    "libs/",
]
